Created javascript file

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         </form>
     </header>
 
-    <main id="main"></main>
+    <main id="main">
+        <div class="movie">
+            <img src="" alt="img">
+        </div>
+    </main>
 
-    <script src=""></script>
+    <script src="script.js"></script>
+    
     
 </body>
 </html>
