Search function works now

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <form>
+        <form id="searchBox">
             <input type = "text" placeholder="Movie Name" id="search" class="search">
         </form>
     </header>
