Added a menu to sort movies

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <form id="searchBox">
             <input type = "text" placeholder="Movie Name" id="search" class="search">
         </form>
+        <form id="menuBox">
+            <select id="menu">
+                <option value="top-rated">Top Rated</option>
+            </select>
+            <input type="submit">
+        </form>
     </header>
 
     <main id="main">
