More sorting ways

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         </form>
         <form id="menuBox">
             <select id="menu">
-                <option value="top-rated">Top Rated</option>
+                <option value="none">Default</option>
+                <option value="top-rated">Top Rated (min. 50 votes)</option>
+                <option value="lowest-rated">Lowest Rated (min. 50 votes)</option>
+                <option value="least-pop">Current Least Popular</option>
+                <option value="most-pop">Current Most Popular</option>
             </select>
             <input type="submit">
         </form>
